--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "devDependencies": {
     "grunt-contrib-watch": "~0.4.4",
-    "grunt-contrib-requirejs": "~0.4.3",
     "grunt": "~0.4.4",
-    "rjs-build-analysis": "0.0.3",
-    "grunt-contrib-less": "~0.10.0",
-    "grunt-contrib-concat": "latest",
-    "grunt-contrib-uglify": "latest",
+    "grunt-browserify": "latest",
+    "jquery": "~2.1",
+    "gsap": "latest",
+    "es5-shim": "latest",
+    "raphael" : "~2.1.0",
     "grunt-bowercopy":"latest"
   },
   "keywords": []
