detached from lagrange framework to different project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "traceLineFw",
-  "title": "trace_line_fw",
+  "name": "lagrange drawing",
+  "title": "La Grange Drawing",
   "version": "0.0.1",
   "homepage": "",
   "author": {
