--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lagrange drawing",
+  "name": "lagrange-drawing",
   "title": "La Grange Drawing",
   "version": "0.0.1",
   "homepage": "",
