--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "lagrange-drawing",
   "title": "La Grange Drawing",
+  "description":"Utils to draw svg paths as if someone was tracing them",
+  "keywords" : ["svg","raphael","gsap"],
+  "main":["app/lagrange"],
   "version": "0.0.1",
-  "homepage": "",
+  "homepage": "http://la-grange.ca",
   "author": {
     "name": "La Grange",
     "email": "info@la-grange.ca"
@@ -10,8 +13,7 @@
   "devDependencies": {
     "grunt-contrib-watch": "~0.4.4",
     "grunt": "~0.4.4",
-    "grunt-browserify": "latest",
-    "grunt-bowercopy":"latest"
+    "grunt-browserify": "~3.0"
   },
   "dependencies" : {
     "jquery": "~2.1",
@@ -19,6 +21,5 @@
     "es5-shim": "latest",
     "raphael" : "~2.1.0",
     "lodash" : "latest"
-  },
-  "keywords": []
+  }
 }
